Add styling and font for title

--- a/app/dashboard/grooves/[grooveId]/page.module.scss
+++ b/app/dashboard/grooves/[grooveId]/page.module.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  width: 97vw;
+  width: 100vw;
 
   p {
     font-size: 0.8rem;
@@ -56,7 +56,7 @@
   background: rgba(2, 4, 32, 0.3);
 }
 .div {
-  box-shadow: 0 4px 30px rgba(243, 235, 235, 0.3);
+  // box-shadow: 0 4px 30px rgba(243, 235, 235, 0.3);
   backdrop-filter: blur(8.4px);
   -webkit-backdrop-filter: blur(8.4px);
   background-color: rgba(5, 12, 32, 0.2);
