--- a/app/dashboard/(auth)/login/page.module.scss
+++ b/app/dashboard/(auth)/login/page.module.scss
@@ -7,6 +7,12 @@
   padding: 2rem;
   width: 100vw;
   color: white;
+  h3 {
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 1.2rem;
+  }
 }
 .form {
   margin: auto;
