--- a/app/dashboard/(auth)/registration/page.module.scss
+++ b/app/dashboard/(auth)/registration/page.module.scss
@@ -6,6 +6,9 @@
   margin-top: 5rem;
   width: 100vw;
   // height: 100vh;
+  h3 {
+    color: white;
+  }
 }
 .form_container {
   text-align: left;
@@ -14,7 +17,7 @@
   background-color: rgba(5, 12, 32, 0.8);
   color: white;
   display: inline-block;
-  margin: 2rem 0;
+  margin: 0 0 2rem;
   font-weight: 700;
   font-size: 1rem;
   letter-spacing: 0.2vw;
