--- a/app/dashboard/profile/[userId]/page.module.scss
+++ b/app/dashboard/profile/[userId]/page.module.scss
@@ -60,11 +60,10 @@
   margin: 0;
   line-height: 0.8rem;
   h3 {
-    margin: 0.3rem 0;
+    margin: 0.3rem;
     font-size: 1.2rem;
     margin-bottom: -0.9rem;
     padding-top: 0.7rem;
-    // margin-right: -2.8rem;
   }
 }
 
@@ -193,28 +192,13 @@
 }
 // message sign from the user page
 
+.message {
+  // margin: 0.5rem;
+}
 .signes {
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 0.5rem;
   gap: 0.5rem;
-}
-.profile {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  button {
-    border: none;
-    background-color: rgba(185, 179, 179, 0);
-    // margin-top: -0.5rem;
-  }
-
-  img {
-    margin: 0.3rem;
-    font-size: 1.2rem;
-    margin-bottom: -2rem;
-    margin-right: -5rem;
-  }
 }
