Add padding for form

--- a/app/dashboard/grooves/[grooveId]/page.module.scss
+++ b/app/dashboard/grooves/[grooveId]/page.module.scss
@@ -9,6 +9,7 @@
     backdrop-filter: blur(8.4px);
     -webkit-backdrop-filter: blur(8.4px);
     background-color: rgba(5, 12, 32, 0.2);
+    padding-bottom: 1.5rem;
   }
   p {
     font-size: 0.8rem;
