--- a/app/dashboard/grooves/[grooveId]/page.module.scss
+++ b/app/dashboard/grooves/[grooveId]/page.module.scss
@@ -15,8 +15,8 @@
     // padding-bottom: 1.5rem;
   }
   .form {
-    // backdrop-filter: blur(8.4px);
-    // -webkit-backdrop-filter: blur(8.4px);
+    backdrop-filter: blur(8.4px);
+    -webkit-backdrop-filter: blur(8.4px);
     background-color: rgba(5, 12, 32, 0.8);
     padding-bottom: 1.5rem;
   }
