--- a/app/dashboard/grooves/users-grooves/[userId]/page.module.scss
+++ b/app/dashboard/grooves/users-grooves/[userId]/page.module.scss
@@ -83,6 +83,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding-bottom: 5rem;
   ul {
     display: flex;
     flex-direction: column;
