--- a/app/dashboard/grooves/[grooveId]/page.module.scss
+++ b/app/dashboard/grooves/[grooveId]/page.module.scss
@@ -5,15 +5,7 @@
   align-items: center;
   text-align: center;
   width: 100vw;
-  // backdrop-filter: blur(8.4px);
-  // -webkit-backdrop-filter: blur(8.4px);
-  // background-color: rgba(5, 12, 32, 0.8);
-  form {
-    // backdrop-filter: blur(8.4px);
-    // -webkit-backdrop-filter: blur(8.4px);
-    // background-color: rgba(5, 12, 32, 0.7);
-    // padding-bottom: 1.5rem;
-  }
+
   .form {
     backdrop-filter: blur(4.4px);
     -webkit-backdrop-filter: blur(4.4px);
@@ -70,14 +62,11 @@
   background: rgba(2, 4, 32, 0.3);
 }
 .div {
-  // box-shadow: 0 4px 30px rgba(243, 235, 235, 0.3);
-
   padding-bottom: 1.5rem;
   margin: 3rem 0 3rem 0;
   padding: 0 1rem 2rem;
   display: flex;
   flex-direction: column;
-
   color: white;
   align-items: center;
   text-align: center;
@@ -227,12 +216,14 @@
   }
 }
 .about {
-  margin-bottom: 0;
+  margin-bottom: 1rem;
   max-width: 400px;
   padding-bottom: 1rem;
+  padding: 0 1rem;
 
   h4 {
     letter-spacing: 0.2rem;
+    margin-bottom: 0.5rem;
   }
 }
 .language {
