--- a/app/dashboard/page.module.scss
+++ b/app/dashboard/page.module.scss
@@ -1,15 +1,22 @@
 .page {
   color: white;
-  margin: 8rem 2rem;
-  border-top: solid white 1.2px;
-  border-bottom: solid white 1.2px;
+  margin: 6rem 2rem;
   padding: 1rem 3rem;
-  background-color: rgba(8, 14, 37, 0.3);
   h3 {
     letter-spacing: 3px;
     text-transform: uppercase;
     font-weight: 600;
     font-size: 2rem;
+  }
+}
+.content {
+  border-top: solid white 1.2px;
+  border-bottom: solid white 1.2px;
+  background-color: rgba(8, 14, 37, 0.6);
+  p {
+    font-weight: 400;
+    letter-spacing: 1.5px;
+    font-size: 1.1rem;
   }
 }
 .buttons {
