--- a/app/dashboard/grooves/[grooveId]/page.module.scss
+++ b/app/dashboard/grooves/[grooveId]/page.module.scss
@@ -73,25 +73,8 @@
 }
 .profileImg {
   border-radius: 50%;
-  padding: 0.5rem;
 }
-.comments {
-  ul {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin: 1rem 0rem;
-    padding: 1rem;
-    color: black;
-    border-top: solid white 1.2px;
-    li {
-      margin: -0.5rem 0;
-      img {
-        padding: 0.5rem;
-      }
-    }
-  }
-}
+
 .hosted {
   display: flex;
   justify-content: center;
@@ -355,6 +338,26 @@
 .plus:hover {
   background: rgb(131, 12, 113) 0%;
 }
+.comments {
+  ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 1rem 0rem;
+    padding: 1rem;
+    color: black;
+    border-top: solid white 1.2px;
+    li {
+      margin: -0.5rem 0;
+      img {
+        border-radius: 50%;
+        width: 2.5rem;
+        height: 2.5rem;
+        // margin: 0.5rem 0.5rem 0;
+      }
+    }
+  }
+}
 .addComment {
   display: flex;
   justify-content: center;
@@ -403,9 +406,16 @@
   display: flex;
   align-items: center;
   margin-bottom: 0.7rem;
+  h5 {
+    margin: 0;
+  }
+  button {
+    background-color: rgba(255, 77, 118, 0);
+    border: none;
+  }
   div {
     align-items: center;
-    text-align: center;
+    text-align: left;
   }
   div:first-of-type {
     display: flex;
@@ -423,6 +433,7 @@
 
     p {
       color: black;
+      text-align: left;
       span {
         color: grey;
         font-size: 0.7rem;
@@ -430,9 +441,7 @@
     }
   }
 }
-.commentWithDelete {
-  display: flex;
-}
+
 .buttonsOnEdit {
   display: flex;
   justify-content: center;
