--- a/app/dashboard/grooves/[grooveId]/page.module.scss
+++ b/app/dashboard/grooves/[grooveId]/page.module.scss
@@ -3,7 +3,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
   width: 100vw;
 
   .form {
@@ -73,6 +72,7 @@
 }
 .profileImg {
   border-radius: 50%;
+  margin: 0.5rem;
 }
 
 .hosted {
@@ -309,7 +309,6 @@
   margin: 0.5rem;
   color: white;
   background-color: rgba(5, 12, 32, 0.2);
-
   border: 1.2px rgba(164, 179, 221, 0.5) solid;
 }
 .squareEditButtons:hover {
@@ -342,18 +341,29 @@
   ul {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    margin: 1rem 0rem;
+    justify-content: flex-start;
+    margin: 1rem 0;
     padding: 1rem;
     color: black;
     border-top: solid white 1.2px;
     li {
-      margin: -0.5rem 0;
+      div {
+        text-align: left;
+        p {
+          text-align: left;
+        }
+      }
       img {
         border-radius: 50%;
         width: 2.5rem;
         height: 2.5rem;
-        // margin: 0.5rem 0.5rem 0;
+        margin: 0.5rem;
+      }
+      button {
+        img {
+          width: 1.5rem;
+          height: 1.5rem;
+        }
       }
     }
   }
@@ -392,7 +402,6 @@
 .commentDiv {
   display: flex;
   justify-content: center;
-  align-items: baseline;
   input {
     border: solid white 1.2px;
     padding: 0.4rem;
@@ -404,26 +413,26 @@
 }
 .commentBody {
   display: flex;
-  align-items: center;
   margin-bottom: 0.7rem;
+  align-items: flex-start;
+  text-align: left;
   h5 {
     margin: 0;
+  }
+  p {
+    text-align: left;
   }
   button {
     background-color: rgba(255, 77, 118, 0);
     border: none;
   }
   div {
-    align-items: center;
-    text-align: left;
+    width: 20rem;
   }
   div:first-of-type {
     display: flex;
     flex-direction: column;
-
-    img {
-      margin: 8px 8px 0;
-    }
+    justify-content: flex-start;
   }
   div:last-of-type {
     background-color: white;
@@ -433,7 +442,6 @@
 
     p {
       color: black;
-      text-align: left;
       span {
         color: grey;
         font-size: 0.7rem;
@@ -458,7 +466,6 @@
     font-weight: 400;
     letter-spacing: 0.2vw;
     background: hsla(285, 76%, 36%, 1);
-
     background: linear-gradient(
       180deg,
       hsla(285, 76%, 36%, 1) 0%,
