--- a/app/dashboard/grooves/[grooveId]/page.module.scss
+++ b/app/dashboard/grooves/[grooveId]/page.module.scss
@@ -347,6 +347,8 @@
     color: black;
     border-top: solid white 1.2px;
     li {
+      text-align: left;
+
       div {
         text-align: left;
         p {
@@ -415,7 +417,7 @@
   display: flex;
   margin-bottom: 0.7rem;
   align-items: flex-start;
-  text-align: left;
+  align-content: flex-start;
   h5 {
     margin: 0;
   }
