--- a/app/dashboard/(auth)/login/page.module.scss
+++ b/app/dashboard/(auth)/login/page.module.scss
@@ -44,6 +44,7 @@
     width: 6rem;
     color: white;
     align-items: center;
+    border: solid 1.2px rgba(255, 255, 255, 0.6);
   }
   button:hover {
     background: rgba(2, 4, 32, 0.5);
