--- a/app/dashboard/(auth)/registration/page.module.scss
+++ b/app/dashboard/(auth)/registration/page.module.scss
@@ -51,6 +51,7 @@
     display: inline-block;
     align-items: center;
     cursor: pointer;
+    border: solid 1.2px rgba(255, 255, 255, 0.6);
   }
   button:hover {
     background: rgba(20, 23, 59, 0.5);
