--- a/app/dashboard/grooves/[grooveId]/page.module.scss
+++ b/app/dashboard/grooves/[grooveId]/page.module.scss
@@ -235,7 +235,9 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 0.5rem;
-
+  p {
+    text-align: center;
+  }
   img {
     margin-bottom: 0.5rem;
   }
