--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -61,7 +61,7 @@
     // );
     background-color: rgba(5, 12, 32, 0);
     color: white;
-    // border: solid 1.2px rgba(5, 12, 32, 0.7);
+    border: solid 1.2px rgba(255, 255, 255, 0.6);
     padding: 7px;
     text-align: center;
     text-decoration: none;
