Add buttons margin in users-grooves

--- a/app/dashboard/grooves/users-grooves/[userId]/page.module.scss
+++ b/app/dashboard/grooves/users-grooves/[userId]/page.module.scss
@@ -16,12 +16,11 @@
   font-size: 0.8rem;
   border-radius: 8px;
   padding: 6px 3px;
-  // margin: 7px;
+  margin: 7px;
   width: 9rem;
   height: 2.7rem;
   color: white;
   align-items: center;
-
   background: hsla(285, 76%, 36%, 1);
 
   background: linear-gradient(
